feat: new permission concept (#110)