@@ -10,13 +10,11 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.sitepark.ies.userrepository.core.domain.entity.Anchor;
+import com.sitepark.ies.sharedkernel.anchor.domain.Anchor;
+import com.sitepark.ies.sharedkernel.anchor.exception.AnchorAlreadyExistsException;
+import com.sitepark.ies.sharedkernel.security.exceptions.AccessDeniedException;
 import com.sitepark.ies.userrepository.core.domain.entity.Password;
 import com.sitepark.ies.userrepository.core.domain.entity.User;
-import com.sitepark.ies.userrepository.core.domain.entity.role.Ref;
-import com.sitepark.ies.userrepository.core.domain.entity.role.UserLevelRoles;
-import com.sitepark.ies.userrepository.core.domain.exception.AccessDeniedException;
-import com.sitepark.ies.userrepository.core.domain.exception.AnchorAlreadyExistsException;
 import com.sitepark.ies.userrepository.core.domain.exception.LoginAlreadyExistsException;
 import com.sitepark.ies.userrepository.core.port.AccessControl;
 import com.sitepark.ies.userrepository.core.port.ExtensionsNotifier;
@@ -24,11 +22,10 @@ import com.sitepark.ies.userrepository.core.port.IdGenerator;
 import com.sitepark.ies.userrepository.core.port.PasswordHasher;
 import com.sitepark.ies.userrepository.core.port.RoleAssigner;
 import com.sitepark.ies.userrepository.core.port.UserRepository;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.Test;
 
-@SuppressWarnings("PMD.AvoidDuplicateLiterals")
 class CreateUserTest {
 
   @Test
@@ -36,7 +33,7 @@ class CreateUserTest {
 
     UserRepository repository = mock();
     AccessControl accessControl = mock(AccessControl.class);
-    when(accessControl.isUserCreateable()).thenReturn(false);
+    when(accessControl.isUserCreatable()).thenReturn(false);
     ExtensionsNotifier extensionsNotifier = mock(ExtensionsNotifier.class);
     PasswordHasher passwordHasher = mock(PasswordHasher.class);
 
@@ -44,13 +41,7 @@ class CreateUserTest {
 
     var createUserUseCase =
         new CreateUser(repository, null, accessControl, null, extensionsNotifier, passwordHasher);
-    assertThrows(
-        AccessDeniedException.class,
-        () -> {
-          createUserUseCase.createUser(user);
-        });
-
-    verify(accessControl).isUserCreateable();
+    assertThrows(AccessDeniedException.class, () -> createUserUseCase.createUser(user));
   }
 
   @Test
@@ -59,11 +50,7 @@ class CreateUserTest {
     User user = User.builder().id("123").login("test").build();
 
     var createUserUseCase = new CreateUser(null, null, null, null, null, null);
-    assertThrows(
-        IllegalArgumentException.class,
-        () -> {
-          createUserUseCase.createUser(user);
-        });
+    assertThrows(IllegalArgumentException.class, () -> createUserUseCase.createUser(user));
   }
 
   @Test
@@ -73,7 +60,7 @@ class CreateUserTest {
     UserRepository repository = mock();
     when(repository.resolveAnchor(Anchor.ofString("test.user"))).thenReturn(Optional.of("123"));
     AccessControl accessControl = mock(AccessControl.class);
-    when(accessControl.isUserCreateable()).thenReturn(true);
+    when(accessControl.isUserCreatable()).thenReturn(true);
     ExtensionsNotifier extensionsNotifier = mock(ExtensionsNotifier.class);
     PasswordHasher passwordHasher = mock(PasswordHasher.class);
 
@@ -82,24 +69,15 @@ class CreateUserTest {
     var createUserUseCase =
         new CreateUser(repository, null, accessControl, null, extensionsNotifier, passwordHasher);
 
-    AnchorAlreadyExistsException e =
-        assertThrows(
-            AnchorAlreadyExistsException.class,
-            () -> {
-              createUserUseCase.createUser(user);
-            });
-
-    assertEquals(Anchor.ofString("test.user"), e.getAnchor(), "unexpected anchor");
-    assertEquals("123", e.getOwner(), "unexpected owner");
-    assertNotNull(e.getMessage(), "message is null");
+    assertThrows(AnchorAlreadyExistsException.class, () -> createUserUseCase.createUser(user));
   }
 
   @Test
-  @SuppressWarnings("PMD.JUnitTestContainsTooManyAsserts")
+  @SuppressWarnings("PMD.UnitTestContainsTooManyAsserts")
   void testCreateWithRoles() {
 
     AccessControl accessControl = mock();
-    when(accessControl.isUserCreateable()).thenReturn(true);
+    when(accessControl.isUserCreatable()).thenReturn(true);
     IdGenerator idGenerator = mock();
     when(idGenerator.generate()).thenReturn("123");
     ExtensionsNotifier extensionsNotifier = mock();
@@ -109,7 +87,7 @@ class CreateUserTest {
     when(repository.resolveLogin(anyString())).thenReturn(Optional.empty());
     RoleAssigner roleAssigner = mock();
 
-    User user = User.builder().login("test").roleList(UserLevelRoles.USER, Ref.ofId("333")).build();
+    User user = User.builder().login("test").roleIds("333").build();
 
     var createUserUseCase =
         new CreateUser(
@@ -120,19 +98,14 @@ class CreateUserTest {
             extensionsNotifier,
             passwordHasher);
 
-    createUserUseCase.createUser(user);
+    String id = createUserUseCase.createUser(user);
 
-    User effectiveUser =
-        User.builder()
-            .id("123")
-            .login("test")
-            .roleList(UserLevelRoles.USER, Ref.ofId("333"))
-            .build();
+    assertEquals("123", id, "unexpected id");
+
+    User effectiveUser = User.builder().id("123").login("test").roleIds("333").build();
 
     verify(repository).create(eq(effectiveUser));
-    verify(roleAssigner)
-        .assignRoleToUser(
-            Arrays.asList(UserLevelRoles.USER, Ref.ofId("333")), Arrays.asList("123"));
+    verify(roleAssigner).assignRoleToUser(List.of("333"), List.of("123"));
   }
 
   @Test
@@ -140,7 +113,7 @@ class CreateUserTest {
   void testCreateWithAnchor() {
 
     AccessControl accessControl = mock();
-    when(accessControl.isUserCreateable()).thenReturn(true);
+    when(accessControl.isUserCreatable()).thenReturn(true);
     IdGenerator idGenerator = mock();
     when(idGenerator.generate()).thenReturn("123");
     ExtensionsNotifier extensionsNotifier = mock();
@@ -174,7 +147,7 @@ class CreateUserTest {
   void testCreateWithPassword() {
 
     AccessControl accessControl = mock();
-    when(accessControl.isUserCreateable()).thenReturn(true);
+    when(accessControl.isUserCreatable()).thenReturn(true);
     IdGenerator idGenerator = mock();
     when(idGenerator.generate()).thenReturn("123");
     ExtensionsNotifier extensionsNotifier = mock();
@@ -203,11 +176,11 @@ class CreateUserTest {
   }
 
   @Test
-  @SuppressWarnings("PMD.JUnitTestContainsTooManyAsserts")
+  @SuppressWarnings("PMD.UnitTestContainsTooManyAsserts")
   void testCreateWithExistsLogin() {
 
     AccessControl accessControl = mock();
-    when(accessControl.isUserCreateable()).thenReturn(true);
+    when(accessControl.isUserCreatable()).thenReturn(true);
     IdGenerator idGenerator = mock();
     when(idGenerator.generate()).thenReturn("123");
     ExtensionsNotifier extensionsNotifier = mock();
@@ -217,7 +190,7 @@ class CreateUserTest {
     when(repository.resolveLogin(anyString())).thenReturn(Optional.of("345"));
     RoleAssigner roleAssigner = mock();
 
-    User user = User.builder().login("test").roleList(UserLevelRoles.USER, Ref.ofId("333")).build();
+    User user = User.builder().login("test").roleIds("333").build();
 
     var createUserUseCase =
         new CreateUser(
@@ -229,11 +202,7 @@ class CreateUserTest {
             passwordHasher);
 
     LoginAlreadyExistsException e =
-        assertThrows(
-            LoginAlreadyExistsException.class,
-            () -> {
-              createUserUseCase.createUser(user);
-            });
+        assertThrows(LoginAlreadyExistsException.class, () -> createUserUseCase.createUser(user));
     assertEquals("test", e.getLogin(), "unexpected login");
     assertEquals("345", e.getOwner(), "unexpected owner");
     assertNotNull(e.getMessage(), "message is null");
